# sherlog

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
source/: main.py  output-sample.json  sherlog.py
source/modules/: all_regions.py  appSync.py  arango.py  aws_session.py  cloudFront.py  dynamoDB.py  ecs.py  eks.py  init.py  pretty_output.py  rds.py  redshift.py  sherlog_appSync.py  sherlog_cloudfront.py  sherlog_dynamoDB.py  sherlog_elb.py  sherlog_init.py  sherlog_rds.py  sherlog_redshift.py  sherlog_s3.py
source/modules/aws/: cloudfront.py  cloudwatch.py  dynamoDB.py  elb.py  rds.py  redshift.py  s3.py
source/modules/helpers/: all_regions.py  loader.py  pretty_output.py  results_printer.py
source/tests/redshift/: test_log_detection.py  test_redshift_log_status.py
source/tests/redshift/mocks/: describe_clusters.json  get_logging_status.json
source/tests/s3/: test_s3_log_status.py
source/tests/s3/mocks/: s3_logging.json
