[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlog"
description = "AWS logging gap analyzer"
license = {text = "MIT"}
requires-python = ">=3.7"
version = "0.0.3"
dependencies = [
    "boto3",
    "tabulate"
]

[tool.setuptools]
package-dir = {"" = "source"}

[project.urls]
"Homepage" = "https://github.com/octoguard-io/Sherlog"
"Bug Tracker" = "https://github.com/octoguard-io/Sherlog/issues"

[project.scripts]
sherlog = "main:main"