[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlog"
description = "AWS Log analyzer"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.6"
dependencies = [
    "boto3==1.26.74"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "source"}

[project.urls]
"Homepage" = "https://github.com/octoguard-io/Sherlog"
"Bug Tracker" = "https://github.com/octoguard-io/Sherlog/issues"

[project.scripts]
sherlog = "main:main"